# bauman.c.programming.labs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lab_07/: CMakeLists.txt
lab_07/_inc/: main.h
lab_07/_src/: main.c  sort_01.c  sort_02.c  sort_03.c  sort_04.c  sort_05.c  sort_06.c  sort_07.c
lab_07/_unit_tests/: check_main.c  check_sort.c
lab_07/lab_07_01/: CMakeLists.txt
lab_07/lab_07_01/func_tests/: readme.md
lab_07/lab_07_01/src/: filter.c
lab_07/lab_07_01/unit_tests/: check_filter.c
lab_07/lab_07_02/: CMakeLists.txt
lab_07/lab_07_02/src/: filter.c
lab_07/lab_07_03/: CMakeLists.txt
lab_07/lab_07_03/func_tests/: neg_01_out.txt  neg_02_out.txt  readme.md
lab_07/lab_07_03/src/: filter.c
lab_07/lab_07_03/unit_tests/: check_filter.c
lab_07/lab_07_04/: CMakeLists.txt
lab_07/lab_07_04/func_tests/: pos_04_in.txt  pos_04_out.txt
lab_07/lab_07_04/src/: filter.c
lab_07/lab_07_04/unit_tests/: check_filter.c
lab_07/lab_07_05/: CMakeLists.txt
lab_07/lab_07_05/func_tests/: pos_04_in.txt  pos_04_out.txt  readme.md
lab_07/lab_07_05/src/: filter.c
lab_07/lab_07_05/unit_tests/: check_filter.c
lab_08/: CMakeLists.txt
lab_08/_inc/: main.h
lab_08/_src/: format.c  format_coord.c  format_plain.c  main.c
lab_08/_unit_tests/: check_main.c
lab_08/lab_08_03_01/: CMakeLists.txt  readme.md
lab_08/lab_08_03_01/src/: main.c
lab_08/lab_08_03_01/unit_tests/: check_main.c
lab_08/lab_08_03_11/: CMakeLists.txt
lab_08/lab_08_03_11/func_tests/: pos_01_args.txt  pos_01_out.txt  readme.md
lab_08/lab_08_03_11/src/: main.c
lab_08/lab_08_03_11/unit_tests/: check_main.c
lab_09/: CMakeLists.txt
lab_09/_inc/: main.h
lab_09/_src/: main.c
lab_09/_unit_tests/: check_main.c
lab_09/lab_09_01/: CMakeLists.txt
lab_09/lab_09_01/func_tests/: pos_01_args.txt  pos_02_args.txt  pos_02_out.txt  pos_03_args.txt  pos_03_in.txt  pos_03_out.txt  readme.md
lab_09/lab_09_01/inc/: struct.h
lab_09/lab_09_01/src/: main.c
lab_09/lab_09_02/: CMakeLists.txt
lab_09/lab_09_02/func_tests/: pos_01_out.txt  pos_02_args.txt  pos_03_args.txt  pos_03_in.txt  pos_03_out.txt
lab_09/lab_09_02/inc/: struct.h
lab_09/lab_09_02/src/: main.c
lab_09/lab_09_03/: CMakeLists.txt
lab_09/lab_09_03/func_tests/: neg_01_args.txt  pos_01_args.txt  pos_01_out.txt  pos_02_args.txt  pos_02_in.txt  pos_02_out.txt
lab_09/lab_09_03/inc/: struct.h
lab_09/lab_09_03/src/: main.c
lab_10/: CMakeLists.txt
lab_10/_inc/: main.h
lab_10/_src/: main.c
lab_10/_unit_tests/: check_main.c
lab_10/lab_10_01/: CMakeLists.txt
lab_10/lab_10_01/func_tests/: pos_01_args.txt  pos_01_out.txt  pos_02_args.txt  pos_02_out.txt  pos_03_args.txt  pos_03_out.txt  pos_04_args.txt  pos_04_out.txt  pos_05_args.txt  pos_06_args.txt  pos_06_out.txt  pos_07_args.txt  pos_07_out.txt  pos_08_args.txt  pos_08_out.txt  pos_09_args.txt  pos_09_out.txt
lab_10/lab_10_01/inc/: fn_append.h  fn_copy.h  fn_find.h  fn_insert.h  fn_pop_back.h  fn_pop_front.h  fn_remove_duplicates.h  fn_reverse.h  fn_sort.h  struct.h
lab_10/lab_10_01/src/: fn_append.c  fn_copy.c  fn_find.c  fn_insert.c  fn_pop_back.c  fn_pop_front.c  fn_remove_duplicates.c  fn_reverse.c  fn_sort.c  main.c
lab_10/lab_10_01/unit_tests/: check_main.c
lab_10/lab_10_02/: CMakeLists.txt
lab_10/lab_10_02/inc/: menu.h  text.h  value.h
lab_10/lab_10_02/src/: main01.c  main02.c  main03.c  main04.c  main05.c  menu.c  text.c  value.c
lab_10/lab_10_02/unit_tests/: check_main.c
lab_11/: CMakeLists.txt  format.txt
lab_11/inc/: main.h
lab_11/src/: main.c
lab_11/unit_tests/: check_main.c
lab_12/: CMakeLists.txt
lab_12/_inc/: main.h
lab_12/_src/: main.c
lab_12/_unit_tests/: check_main.c  dummy_lib.c
lab_12/lab_12_03_1/: CMakeLists.txt
lab_12/lab_12_03_1/src/: filter.c
lab_12/lab_12_03_1/unit_tests/: check_filter.c
lab_12/lab_12_03_2/: CMakeLists.txt  intergate_test.py  ui.py
lab_12/lab_12_03_2/inc/: functions.h
lab_12/lab_12_03_2/src/: functions.c
lab_12/lab_12_03_2/unit_tests/: check_functions.c
